<resources>
    <string name="app_name">Droid Encrypted Database</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_student_class">Enter Student Class</string>
    <string name="enter_student_roll_no">Enter Student Roll No</string>
    <string name="save_to_database">Save To Database</string>
    <string name="retrieve_from_database">Retrieve From Database</string>
    <string name="delete_from_database">Delete From Database</string>
    <string name="update_database">Update Database</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="retrieve">Retrieve</string>
    <string name="insert">Insert</string>
</resources>
